--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.kafka.bootstrap-servers=kafkaserver:9092
+spring.kafka.consumer.group-id=group_id
 
+message.topic.name=acumulates
+message.topic.name2=${topicname2}
+message.group.name=${groupid}
